--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://achintamitra23.github.io/enchanted-hearts",
-  "name": "frontend-app",
+  "name": "enchanted-hearts",
   "version": "1.0.0",
   "private": true,
   "type": "module",
@@ -69,6 +69,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.18",
+    "@types/node": "^25.2.2",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.7.0",
